// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractDependencies() extracts engines 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "1.6.0",
      "depName": "angular",
      "depType": "dependencies",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.6.0",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/cli",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "*",
      "depName": "foo",
      "depType": "devDependencies",
      "purl": "pkg:npm/foo",
      "skipReason": "any-version",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "skipReason": "file",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "skipReason": "unknown-engines",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentVersion": ">= 8.9.2",
      "depName": "node",
      "depType": "engines",
      "major": Object {
        "enabled": false,
      },
      "purl": "pkg:github/nodejs/node?clean=true",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "npm",
      "currentVersion": "^8.0.0",
      "depName": "npm",
      "depType": "engines",
      "purl": "pkg:npm/npm",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentVersion": "disabled",
      "depName": "yarn",
      "depType": "engines",
      "purl": "pkg:github/yarnpkg/yarn?clean=true",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds a lock file 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds complex yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds lerna 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() returns an array of dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
